BusOne/src/objects/Key_Stakeholder_vod__c.object
<CustomObject>
    <description>Object to store key stakeholders on an account plan.</description>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account plan a key stakeholder is related to</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Key Stakeholders</relationshipLabel>
        <relationshipName>Key_Stakeholder_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key_Stakeholder_Name_vod__c</fullName>
        <description>Text value of the key stakeholder&apos;s name. Used for stakeholders that are not in the CRM system. Stamped via trigger when the Key Stakeholder is populated</description>
        <label>Key Stakeholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Stakeholder_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key stakeholder on an account plan</description>
        <label>Key Stakeholder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Stakeholders</relationshipLabel>
        <relationshipName>Key_Stakeholder_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_vod__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliated with</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Department Head</fullName>
                </value>
                <value>
                    <fullName>P&amp;T Committee Member</fullName>
                </value>
                <value>
                    <fullName>Practice member</fullName>
                </value>
                <value>
                    <fullName>Medical Director</fullName>
                </value>
                <value>
                    <fullName>VP Compliance</fullName>
                </value>
                <value>
                    <fullName>VP Marketing</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Contracts Administrator</fullName>
                </value>
                <value>
                    <fullName>Plan Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakeholder_Owner_Name_vod__c</fullName>
        <description>Text value of the stakeholder owner&apos;s name. Used for users who are not in the CRM system. Stamped via trigger with the Stakeholder Owner is populated</description>
        <label>Stakeholder Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Owner_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in charge of the relationship with the key stakeholder for the account plan</description>
        <label>Stakeholder Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Stakeholder_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Stakeholder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KS-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Stakeholders</pluralLabel>
    <recordTypes>
        <fullName>Key_Stakeholder_vod</fullName>
        <active>true</active>
        <description>Base record type for Key Stakeholders</description>
        <label>Key_Stakeholder_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>